# astrolore

./: .gitignore  Adding_background_test.ipynb  Astrolord_demo.ipynb  Astrolore.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt  scifi_dataset.csv  scifi_dataset.xlsx  scifi_starfinder.py  test6.txt
.github/workflows/: test.yaml
scripts/: run_astrolore.ipynb  run_astrolore.py  test1.py
src/astrolore/: __init__.py  aladin_test.py  dataset.py  gui copy.py  gui.py  gui_demo.ipynb  gui_demo.py  making_sky_plot.ipynb  scifi_starfinder.py  scifistarfinder.py  test.ipynb
src/astrolore/data/: scifi_dataset.csv
tests/: test_dataset.py
